file name change in Building Linear Regression from Scratch

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Navigation -->
     <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-slate-200">
         <div class="max-w-4xl mx-auto px-6 h-16 flex items-center justify-between">
-            <span class="font-bold text-xl tracking-tight gradient-text">ML Notbook</span>
+            <span class="font-bold text-xl tracking-tight gradient-text">ML Notebook</span>
             <div class="space-x-6 text-sm font-medium text-slate-600">
                 <a href="#theory" class="hover:text-blue-600 transition">Theory</a>
                 <a href="#code" class="hover:text-blue-600 transition">Code</a>
